--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -30,6 +30,17 @@ img {
 	transition: all 0.5s ease 0s;
 	margin-bottom: 20px;
 }
+.product3 {
+	background: #fff none repeat scroll 0 0;
+	border: 1px solid #c0c0c0;
+	height: 600px;
+	overflow: hidden;
+	padding: 25px 15px;
+	position: relative;
+	text-align: center;
+	transition: all 0.5s ease 0s;
+	margin-bottom: 20px;
+}
 .product:hover {
 	box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
 }
